fix: change back surefire version