@@ -197,14 +197,12 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M5</version>
+            <version>2.22.0</version>
             <configuration>
               <forkCount>0</forkCount>
               <trimStackTrace>false</trimStackTrace>
               <argLine>
                 -Xmx1024m
-                --add-modules java.xml.bind
-                --illegal-access=permit
               </argLine>
               <groups>org.hisp.dhis.IntegrationTest</groups>
             </configuration>
